--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <body>
-   <section> 
+   <section class="top-banner"> 
       <div class="half-width">
         <h1>Welcome To </h1>
         <h1><span class="Name-highlight">Farhan Shahriar</span> World</h1>
