--- a/index.html
+++ b/index.html
@@ -14,12 +14,53 @@
         <h1><span class="Name-highlight">Farhan Shahriar</span> World</h1>
         <h3>Emerging World Class Web Developer</h3>
         <p>I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+        <a class="link-button" target="_blank" href="https://www.linkedin.com/in/farhan-shahriar-273a491a8/">Hire me</a>
       </div>
       <div class="half-width">
-          <img src="Ratul.jpg" alt="">
+          <img src="ratul2.jpg" alt="">
       </div>
+</section>
+<section class="dream-area">
+  <div class="half-width">
+    <img src="ratul new.jpg" alt="">
+  </div>
+  <div class="half-width">
+    <h2>Big Dream</h2>
+    <h3>Become WOrld No.1 Developer</h3>
+    <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+    <a class="link-button"target="_blank" href="https://www.linkedin.com/in/farhan-shahriar-273a491a8/">Download Resume</a>
+
+  </div>
+
+</section>
+<section class="experience-area">
+  <h2 class="justify">Experiences</h2>
+  <div id="full-stack" class="half-width single-experience">
+    <h2>Full Stack Web Dev</h2>
+    <h3  class="Name-highlight">2021 - Present | Pro level web dev </h3>
+    <p>
+      I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+    </p>
+   
+  </div>
+  <div id="baby-web" class="half-width single-experience">
+    <h2>
+      Baby Web Developer
+    </h2>
+    <h3  class="Name-highlight">
+      2020-2021 | Baby Web Developer
+    </h3>
+    <p>
+      They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+    </p>
+
+  </div>
+
 </section>
     
     
 </body>
+<footer>
+  <p>© Farhan 2020 ,all rights reserved.</p>
+</footer>
 </html>
